--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -103,12 +103,12 @@ img {
 
 /*-- end reset --*/
 body {
-    background: #76b852;
+    background: #b9bbbe;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #76b852, #8DC26F);
-    background: -moz-linear-gradient(to top, #76b852, #8DC26F);
-    background: -o-linear-gradient(to top, #76b852, #8DC26F);
-    background: linear-gradient(to top, #76b852, #8DC26F);
+    background: -webkit-linear-gradient(to top, #b9bbbe, #b9bbbe);
+    background: -moz-linear-gradient(to top, #b9bbbe, #b9bbbe);
+    background: -o-linear-gradient(to top, #b9bbbe, #b9bbbe);
+    background: linear-gradient(to top, #b9bbbe, #b9bbbe);
     background-size: cover;
     background-attachment: fixed;
     font-family: 'Roboto', sans-serif;
